[gd_scene load_steps=6 format=3 uid="uid://dmemvybkecaj7"]

[ext_resource type="Script" path="res://World/Platform Types/controllable_platform.gd" id="1_jwk1r"]
[ext_resource type="Texture2D" uid="uid://bshueiysv4ad3" path="res://Assets/tileset.png" id="2_i0nbm"]
[ext_resource type="Texture2D" uid="uid://b2sb6t38fjb2q" path="res://Assets/lever.png" id="3_yepvj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m7555"]
size = Vector2(48, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ac6kh"]
size = Vector2(48, 9)

[node name="ControllablePlatform" type="CharacterBody2D"]
collision_mask = 3
script = ExtResource("1_jwk1r")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_i0nbm")
region_enabled = true
region_rect = Rect2(0, 88, 48, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_m7555")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ac6kh")

[node name="lever" type="Sprite2D" parent="."]
position = Vector2(-5, -8)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_yepvj")
hframes = 3

[node name="ResetTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_reset_timer_timeout"]
